Adding confusion matrix

--- a/experimentos/Minibatch kmeans.ipynb
+++ b/experimentos/Minibatch kmeans.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +54,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns; sns.set()  # for plot styling\n",
     "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import pairwise_distances\n",
     "%matplotlib inline"
    ]
@@ -82,7 +83,7 @@
    "source": [
     "## Visualização Rápida\n",
     "\n",
-    "Percebe-se nesse dataset a inclusão de duas colunas, correspondentes à classificação dos botnets gafgyt e mirai"
+    "Percebe-se nesse dataset a inclusão de uma coluna, correspondente à classificação dos botnets gafgyt (1) e mirai(2), além do tráfego normal (0)"
    ]
   },
   {
@@ -635,6 +636,41 @@
    ],
    "source": [
     "metrics.calinski_harabaz_score(X, labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matriz de Confusão\n",
+    "\n",
+    "É usada para avaliar a precisão de uma classificação que relaciona a label predita com a real para saber se corresponde. \n",
+    "\n",
+    "Assim, na classificação binária, a contagem de falsos verdadeiros é  C_ {0,0}, falsos negativos C_ {1,0}, positivos verdadeiros  C_ {1,1}e falsos positivos C_ {0,1}.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[91367,    52,   136],\n",
+       "       [21608,  1723,  1669],\n",
+       "       [24953,    12,    35]])"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_true = dataset_security_camera['label']\n",
+    "y_pred = labels\n",
+    "confusion_matrix(y_true, y_pred)"
    ]
   },
   {
