--- a/experimentos/Minibatch kmeans.ipynb
+++ b/experimentos/Minibatch kmeans.ipynb
@@ -674,12 +674,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.array([['Minibatch Kmeans 1'], cm])\n",
-    "np.save('resultados/gm', x)"
+    "np.save('resultados/gmMK', x)"
    ]
   },
   {
