Adicionando segundo experimento do minibatch kmeans com variação de parametros e a metrica v_measuring cluster

--- a/experimentos/Minibatch kmeans.ipynb
+++ b/experimentos/Minibatch kmeans.ipynb
@@ -46,8 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,6 +736,123 @@
     "plt.plot(range(1,100), habaz)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Segundo experimento com Minibatch Kmeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import MiniBatchKMeans\n",
+    "from sklearn.metrics.cluster import v_measure_score\n",
+    "from time import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_target = dataset_security_camera.label\n",
+    "X_mini = dataset_security_camera.drop('label',1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "minibatch_kmeans = MiniBatchKMeans(n_clusters = 3, init='random', max_iter=300, n_init=10, random_state=0, batch_size = 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MiniBatchKMeans...\n",
+      "Done in 0.66s. V-measure: 0.0737\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MiniBatchKMeans...\")\n",
+    "start_time = time()\n",
+    "y_kmeans = minibatch_kmeans.fit_predict(X_mini)\n",
+    "print(\"Done in {:.2f}s. V-measure: {:.4f}\".format(\n",
+    "time() - start_time,\n",
+    "v_measure_score(y_target, y_kmeans)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 2, ..., 2, 2, 2], dtype=int32)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_kmeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  681,    97,    75],\n",
+       "       [  129,  3379,    34],\n",
+       "       [90745, 21524, 24891]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_kmeans, y_target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -752,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
