add seleção de features por limiar de variância

--- a/experimentos/Minibatch kmeans.ipynb
+++ b/experimentos/Minibatch kmeans.ipynb
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -754,12 +754,13 @@
    "source": [
     "from sklearn.cluster import MiniBatchKMeans\n",
     "from sklearn.metrics.cluster import v_measure_score\n",
-    "from time import time"
+    "from time import time\n",
+    "from sklearn.feature_selection import VarianceThreshold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -771,7 +772,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(141555, 105)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_mini = VarianceThreshold(threshold=(.8 * (1 - .8))).fit_transform(X_mini)\n",
+    "print(X_mini.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -782,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +809,7 @@
      "output_type": "stream",
      "text": [
       "MiniBatchKMeans...\n",
-      "Done in 0.66s. V-measure: 0.0737\n"
+      "Done in 0.61s. V-measure: 0.0737\n"
      ]
     }
    ],
@@ -805,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +833,7 @@
        "array([2, 2, 2, ..., 2, 2, 2], dtype=int32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,24 +844,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  681,    97,    75],\n",
-       "       [  129,  3379,    34],\n",
-       "       [90745, 21524, 24891]])"
+       "array([[  681,   129, 90745],\n",
+       "       [   97,  3379, 21524],\n",
+       "       [   75,    34, 24891]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "confusion_matrix(y_kmeans, y_target)"
+    "confusion_matrix(y_target, y_kmeans)"
    ]
   },
   {
