--- a/experimentos/Minibatch kmeans.ipynb
+++ b/experimentos/Minibatch kmeans.ipynb
@@ -771,6 +771,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seleção de features por limiar de variância"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
