--- a/experimentos/Minibatch kmeans.ipynb
+++ b/experimentos/Minibatch kmeans.ipynb
@@ -46,8 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -70,8 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dataset_security_camera = pd.read_csv('../dataset/camera.csv')"
@@ -675,7 +679,9 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = np.array([['Minibatch Kmeans 1'], cm])\n",
@@ -792,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -806,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -914,7 +920,8 @@
     }
    ],
    "source": [
-    "confusion_matrix(y_target, y_kmeans)"
+    "mc_minibatch = confusion_matrix(y_target, y_kmeans)\n",
+    "print(\"Matriz de confusão\\n{}\".format(mc_minibatch))"
    ]
   },
   {
@@ -924,7 +931,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x_mini_batch = np.array([['Minibatch Kmeans 2'], mc_minibatch])\n",
+    "np.save('resultados/mini', x_mini_batch)"
+   ]
   }
  ],
  "metadata": {
@@ -943,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
