Resultados do minibatchkmeans

--- a/experimentos/resultados.ipynb
+++ b/experimentos/resultados.ipynb
@@ -45,12 +45,12 @@
     "        tp = x[1, 1] + x[1, 2] + x[2, 1] + x[2, 2]\n",
     "        fnr = fn / (fn + tp)\n",
     "        pre = tp / (tp + fp)\n",
-    "        pre_x.append(pre)\n",
+    "        pre_x.append(pre * 100)\n",
     "        pre_m.append(m)\n",
     "    else:\n",
     "        continue\n",
     "\n",
-    "    fnr_x.append(fnr)\n",
+    "    fnr_x.append(fnr * 100)\n",
     "    fnr_m.append(m)"
    ]
   },
