adicionando explicação para os comandos executados no experimento

--- a/experimentos/Minibatch kmeans.ipynb
+++ b/experimentos/Minibatch kmeans.ipynb
@@ -797,8 +797,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importanto bibliotecas necessárias"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -808,6 +815,13 @@
     "from sklearn.metrics.cluster import v_measure_score\n",
     "from time import time\n",
     "from sklearn.feature_selection import VarianceThreshold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carregando Dataset"
    ]
   },
   {
@@ -826,12 +840,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seleção de features por limiar de variância"
+    "### Seleção de features por limiar de variância"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -848,8 +862,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Criação do modelo minibatch kmeans"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -859,8 +880,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Execução do medelo calculando o tempo de execução"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +896,7 @@
      "output_type": "stream",
      "text": [
       "MiniBatchKMeans...\n",
-      "Done in 0.61s. V-measure: 0.0737\n"
+      "Done in 0.73s. V-measure: 0.0737\n"
      ]
     }
    ],
@@ -883,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +920,7 @@
        "array([2, 2, 2, ..., 2, 2, 2], dtype=int32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,21 +930,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matriz de Confusão"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  681,   129, 90745],\n",
-       "       [   97,  3379, 21524],\n",
-       "       [   75,    34, 24891]])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz de confusão\n",
+      "[[  681   129 90745]\n",
+      " [   97  3379 21524]\n",
+      " [   75    34 24891]]\n"
+     ]
     }
    ],
    "source": [
@@ -925,8 +958,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Salvando os resultados para análise posterior"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -937,6 +977,15 @@
     "x_mini_batch = np.array([['Minibatch Kmeans 2'], mc_minibatch])\n",
     "np.save('resultados/mini', x_mini_batch)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
